--- a/src/components/MyPosts/MyPosts.module.css
+++ b/src/components/MyPosts/MyPosts.module.css
@@ -118,3 +118,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+.formLogin {
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
