--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -15,8 +15,9 @@
     font-family:cursive;
 }
 
-.authorizeWrapper img {
+.authorizeWrapper .img {
     width: 560px;
+    min-height: 420px;
     border-radius: 10px;
 }
 .formLogin {
