--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* display: block;
+    margin: 0 auto; */
 }
 
 .authorizeText {
@@ -21,13 +23,39 @@
     border-radius: 10px;
 }
 .formLogin {
-    margin-top: 25px;
-    display: flex;
+    margin: 45px auto;
+    /* display: flex;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; */
+    display: block;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(86, 107, 124);
+    -webkit-box-shadow: 0 5px 15px 0 rgb(0 0 0 / 50%);
+    box-shadow: 0 5px 15px 0 rgb(0 0 0 / 50%);
 }
 .formSummaryError {
     border: 2px red solid;
     padding: 5px;
     color: blue;
+}
+.email {
+    border-radius: 5px;
+    background-color: grey;
+    height: 30px;
+    width: 150px;
+}
+.formTitle {
+    border-bottom: 3px pink solid;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    margin-bottom: 15px;
+}
+.fieldTitle {
+    font-weight: 700;
+    font-size: 20px;
+    padding: 5px;
+    /* float: left; */
 }
