--- a/src/components/common/PhotoHover/PhotoHover.module.css
+++ b/src/components/common/PhotoHover/PhotoHover.module.css
@@ -70,7 +70,7 @@
     border-radius: 50%;
     margin-left: 10px;
 }
-.name a{
+.name {
     margin: 5px;
     margin-left: 10px;
     height: 30px;
@@ -79,7 +79,7 @@
     text-decoration: none;
     transition: 0.2s ease;
 }
-.name a:hover {
+.name:hover {
     cursor: pointer;
     color: rgb(134, 50, 134);
     transition: 0.2s ease;
